--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +21,6 @@
     "nodemon": "^2.0.20",
     "sequelize": "^6.28.0",
     "uuid": "^9.0.0"
-  }
+  },
+  "type": "module"
 }
